# syncd

./: .env_sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  render.yaml
.github/workflows/: cd.yml  ci.yml  render-deploy.yml
app/: app_instance.py  main.py
app/api/v1/: auth.py  device.py
app/core/: app_logging.py  config.py  security.py
app/db/: database.py  device_queries.py  models.py
app/schemas/: auth.py  device.py  extension.py  user.py
app/services/: supabase.py
migrations/: env.py
migrations/versions/: 18c20e550da0_initial_migration.py  3484f76e8eff_update_device_model_with_new_fields.py  98db0262d18e_add_extensions_table.py
scripts/: dev_setup.sh  setup_db.sh
tests/: test_main.py
